Added files and initiated the project

--- a/Whisper.ipynb
+++ b/Whisper.ipynb
@@ -1,9 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "87ad8cf2-0d98-4589-9b16-82f82e03916e",
+   "metadata": {},
+   "source": [
+    "## Integrating Whisper into a fully functional Website"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "494256fd-8e83-4799-89c6-b752bf2f20b2",
+   "metadata": {},
+   "source": [
+    "### Installing Whisper and Dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "13208a78-0c84-458b-b740-4b2777661f46",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# pip install git+https://github.com/openai/whisper.git\n",
+    "#pip install flask"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "319c2717-5db1-4ba7-a7c5-6a78c4080664",
+   "id": "f687ff51-c6fe-44e4-a656-0d15b4f0ad24",
    "metadata": {},
    "outputs": [],
    "source": []
